# tf

./: .dockerignore  .gcr.sh  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  build-dev.sh  build-test.sh  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.neo4j.yml  docker-compose.plaid.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  kubes-deployment.yaml  kubes-service.yaml  kubes.yaml  main.go
.circleci/: config.yml
api/: server.go
auth/: Dockerfile.dev  Dockerfile.prod  Dockerfile.test  go.mod  go.sum  main.go
client/: Dockerfile.dev  middleware.ts  next.config.js  package.json  tailwind.config.js  tsconfig.json
objectmapper/: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  app.py  go.go  go.mod  go.sum  main.go  pyproject.toml
objectmapper/api/: app.py  schema.py  server.go
objectmapper/api/controller/: Connect.py  neo4j_controller.py
objectmapper/api/controllers/: routes.go  setup.go  user_bank_controller.go
objectmapper/api/middlewares/: middlewares.go
objectmapper/api/models/: Account.go  Address.go  Balance.go  Email.go  Institution.go  Item.go  Location.go  Models.py  Name.go  Owner.go  PhoneNumber.go  Transaction.go  User.go
objectmapper/api/utils/: constants.py  errors.py  helpers.py  settings.py
objectmapper/models/: Models.py
objectmapper/requirements/: requirements.txt
objectmapper/test/: nested.json
objectmapper/tests/: model_balance_test.go  model_tranaction_test.go  model_user_test.go  setup_test.go
objectmapper/utils/: errors.py
(+230 files in other folders)
