[tool.poetry]
name = "objectmapper"
version = "0.1.0"
description = ""
authors = ["Qwelian D. Tanner <qweliantanner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
requests = "^2.25.1"
neomodel = "^4.0.2"
graphene = "^2.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
